metallb/yaml/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - test.metallb.com
    secretName: traefik-token-86km6
  rules:
  - host: test.metallb.com
    http:
      paths:
      - path: /1
        backend:
          serviceName: coffee-v1-svc
          servicePort: 80
      - path: /2
        backend:
          serviceName: coffee-v2-svc
          servicePort: 80
